<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/contador_de_productos"
              android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="200dp">

        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimary">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_1"
            />
            <TextView android:id="@+id/p1"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimaryDark">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_2"

            />
            <TextView android:id="@+id/p2"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorAccent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_3"/>
            <TextView android:id="@+id/p3"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="150dp">
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorAccent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_4"
            />
            <TextView android:id="@+id/p4"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimary">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_5"

            />
            <TextView android:id="@+id/p5"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimaryDark">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_6"/>
            <TextView android:id="@+id/p6"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="#"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="150dp">

        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimaryDark">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_7"
            />
            <TextView android:id="@+id/p7"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorAccent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_8"

            />
            <TextView android:id="@+id/p8"
                      android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="#"/>

        </LinearLayout>
        <LinearLayout android:layout_width="125dp" android:layout_height="125dp"
                      android:orientation="vertical" android:background="@color/colorPrimary">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto_9"/>
            <TextView android:id="@+id/p9"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="#"/>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="Usuario"
        />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="Escribe tu usuario"
                  android:id="@+id/user"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="Correo"
        />
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="Escribe tu correo"
                  android:inputType="textEmailAddress"
                  android:id="@+id/contrasenia"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send"
                android:id="@+id/buttonSend"/>

    </LinearLayout>
</LinearLayout>